// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. iconemail renders with different colours 1`] = `
<RNSVGSvgView>
  <RNSVGGroup>
    <RNSVGGroup
      fill={null}
    >
      <RNSVGPath
        fill={4290295992}
      />
      <RNSVGPath
        fill={4294967295}
      />
      <RNSVGPath
        fill={4291611852}
      />
      <RNSVGPath
        fill={4290953922}
      />
    </RNSVGGroup>
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`2. iconfacebook renders with different colours 1`] = `
<RNSVGSvgView>
  <RNSVGGroup>
    <RNSVGGroup
      fill={4294626014}
      stroke={4290838510}
    >
      <RNSVGPath />
    </RNSVGGroup>
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`3. iconforwardarrow renders with different colours 1`] = `
<RNSVGSvgView>
  <RNSVGGroup>
    <RNSVGGroup
      fill={4294626014}
    >
      <RNSVGPath />
    </RNSVGGroup>
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`4. iconstar renders with different colours 1`] = `
<RNSVGSvgView>
  <RNSVGGroup>
    <RNSVGPath
      fill={4294626014}
      stroke={4290838510}
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`5. iconcopylink renders with different colours 1`] = `
<RNSVGSvgView>
  <RNSVGGroup>
    <RNSVGPath
      fill={4294626014}
      stroke={4290838510}
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`6. iconsavebookmark renders with different colours 1`] = `
<RNSVGSvgView>
  <RNSVGGroup>
    <RNSVGPath
      fill={4294626014}
      stroke={4290838510}
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`7. icontwitter renders with different colours 1`] = `
<RNSVGSvgView>
  <RNSVGGroup>
    <RNSVGPath
      fill={4294626014}
      stroke={4290838510}
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`8. iconvideo renders with different colours 1`] = `
<RNSVGSvgView>
  <RNSVGGroup>
    <RNSVGRect
      fill={4294626014}
      stroke={4290838510}
    />
    <RNSVGPath
      fill={4294626014}
      stroke={4290838510}
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`9. iconvideo360player renders with different colours 1`] = `
<RNSVGSvgView>
  <RNSVGGroup>
    <RNSVGPath
      fill={4294626014}
      stroke={4290838510}
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`10. thestlogo renders with different colours 1`] = `
<RNSVGSvgView>
  <RNSVGGroup>
    <RNSVGPath
      fill={4294626014}
      stroke={4290838510}
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`11. thetimeslogo renders with different colours 1`] = `
<RNSVGSvgView>
  <RNSVGGroup>
    <RNSVGPath
      fill={4294626014}
      stroke={4290838510}
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`12. closeicon renders with different colours 1`] = `
<RNSVGSvgView>
  <RNSVGGroup>
    <RNSVGPath
      fill={4294626014}
      stroke={4294626014}
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;
